OpenVi 7.0.2 -> OpenVi 7.0.3 (Unreleased): Tue Jan 25 10:02:18 2022
	+ Build: Set visible tab character to '~'; expose option in GNUmakefile
	+ Build: Installed binaries now prefixed with 'o' (e.g. 'ovi') by default
	+ Build: Explicitly invoke a POSIX-compliant version of the awk utility
	+ Build: Clarify (and simplify) GNUmakefile and build configuration
	+ Documentation: Fix ChangeLog spelling and a minor typo
	+ Documentation: Update LICENSE text

OpenVi 7.0.1 -> OpenVi 7.0.2: Tue Jan 25 13:44:48 2022
	+ Build: Debugging builds now default to compiling with '-Wall -Wextra'
	+ Build: Only pass '-pipe' to the compiler for non-debugging builds
	+ Build: Expand the formatting of the usage help text
	+ Build: Change DEBUG_VI flag to simply DEBUG
	+ Build: For debugging builds, document the use of -T (Trace) in usage
	+ Build: Don't strip binary by default; add "install-strip" target
	+ Build: Make clean targets more robust; warn if unable to remove 'bin'
	+ Build: Add standard "clean", "distclean", "realclean", "mostlyclean",
	  and "maintainer-clean" targets to GNUmakefile.
	+ Increase default escapetime to 2/10ths of a second
	+ Add OpenBSD-compatible mkstemp function allowing for longer file names
	+ Silence some potential warnings with explicit casting
	+ Exit with error when screen is too small for visual mode
	+ Apply Debian patch to fix backwards sentence moving
	+ Fix horizontal scroll count; patch from Debian
	+ regexec: Change a #define to a typedef in regex library
	+ Documentation: Fix some typos and minor errors in the tutorials
	+ Update .gitignore to include patch/diff detritus; no binary change.
	+ Adjust calculation to avoid "BDB0511 page sizes must be a power-of-2"
	  warning; BDB 1.85 only cared if oage size was even; closes GH issue #3
	+ Apply .exrc writeability patch from hesso at pool.math.tu-berlin.de
	+ If TERM is unset, set to null, or otherwise unknown, first attempt
	  to fallback to "vt100"; exit with a fatal error if "vt100" fails.